fix : 자바 버전에 맞게 자료형 수정 - collect -> toList()로 수정